Bug 54390 - --print-errors/--silence-errors defaults miss some commands
Summary: --print-errors/--silence-errors defaults miss some commands
Status: RESOLVED FIXED
Alias: None
Product: pkg-config
Classification: Unclassified
Component: src (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Tollef Fog Heen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-02 12:54 UTC by Michał Górny
Modified: 2012-12-11 22:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Michał Górny 2012-09-02 12:54:48 UTC
The --help string states:

  --print-errors                          show verbose information about missing or conflicting packages,default if --cflags or --libs given on the command line

while the code actually lists:

  if (want_my_version ||
      want_version ||
      want_libs ||
      want_cflags ||
      want_l_libs ||
      want_L_libs ||
      want_other_libs ||
      want_I_cflags ||
      want_other_cflags ||
      want_list ||
      want_variable_list)

So I presume that the verbose errors are enabled by default by commands which actually cause output. If that's the intent, the conditional misses some of the options:

- want_provides, want_requires, want_requires_private,
- want_variable.
Comment 1 Dan Nicholson 2012-12-11 22:09:42 UTC
Fixed in commit 86c45f0. Thanks for the report.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.